# bootloader-crc-collider

./: .clang-format  .gitignore  CMakeLists.txt  README.md  app_shared.hpp  composer.cpp  crc_collider.cpp  hash.hpp  solver.cpp
crchack/: README.md  bigint.h  forge.h
